# Solarium

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
axon/: __init__.py  agent.py  exceptions.py  memory.py  message.py  network.py  orchestrator.py  tools.py
docs/: agents.md  index.md  memory.md  network.md  orchestrator.md  tools.md
docs/guides/: first-agent.md  networks.md  streaming.md  tools.md
examples/: 01_basic_agent.py  02_multi_agent_handoff.py  03_pipeline.py  04_streaming.py  05_blackboard.py  06_solana_agent.py  07_solana_multi_agent.py
solarium/: __init__.py  agent.py  blackboard.py  memory.py  message.py  network.py  orchestrator.py  solana_tools.py  tools.py
solarium/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: test_blackboard.py  test_memory.py  test_network.py  test_solana_tools.py  test_tools.py
