[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarium"
version = "0.1.0"
description = "A multi-agent framework built on the Anthropic Claude API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "anthropic", "claude", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/jaenan/solarium"
Repository = "https://github.com/jaenan/solarium"
Issues = "https://github.com/jaenan/solarium/issues"

[tool.hatch.build.targets.wheel]
packages = ["solarium"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["S307", "S102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
