[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarium"
version = "0.1.0"
description = "A multi-provider multi-agent framework (Anthropic, OpenAI, Groq, Ollama, and more)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "anthropic", "claude", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.30.0",
]
solana = [
    "solana>=0.35.0",
    "solders>=0.21.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "openai>=1.30.0",
    "solana>=0.35.0",
    "solders>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/jaenanjs/Solarium"
Repository = "https://github.com/jaenanjs/Solarium"
Issues = "https://github.com/jaenanjs/Solarium/issues"

[tool.hatch.build.targets.wheel]
packages = ["solarium"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["S307", "S102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "solarium.solana_tools"
disallow_untyped_decorators = false
